<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wilsongolden.vigilancetest.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:background="@color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:height="300dp" />


    <TextView
        android:text="@string/miss"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hits"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/misses"
        android:textColor="@color/gray" />

    <TextView
        android:text="@string/hit"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:id="@+id/hits"
        android:textColor="@color/gray" />

    <TextView
        android:text="@string/falseStart"
        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:id="@+id/falseStarts"
        android:textColor="@color/gray" />
</RelativeLayout>
